--- a/mobile-css-dev-olmo-v2.css
+++ b/mobile-css-dev-olmo-v2.css
@@ -1,3 +1,182 @@
-/* -------------------------------------------------------------------------------------- */ 
+/*                                                                        min-width 992px to max-width 1199.95px classes */
 
-/*                                                                        Header classes */ 
+@media (min-width: 768px) and (max-width: 1199.95px) {
+    .h1-font-size {
+        font-size: 2.8rem;
+    }
+
+    .h2-font-size-first {
+        min-height: 1.1rem;
+    }
+
+}
+
+/* ----------------------------------------------------------------------------------------------- */
+
+/*                                                                        max-width 768px classes */
+
+
+@media screen and (max-width: 768px) {
+    .body-container {
+        background-color: rgb(34, 0, 128);
+        height: 500%;
+    }
+
+    /*                                                                          Header classes */
+
+
+    /*                                                                           Main classes */
+
+    .h1-font-size {
+        font-size: 2.55rem;
+    }
+
+    .h2-font-size-first {
+        font-size: 1.05rem;
+    }
+
+    /*                                                                             Footer classes */
+}
+
+
+
+
+/* ----------------------------------------------------------------------------------------------- */
+
+/*                                                                        max-width 426px classes */
+
+
+
+
+@media screen and (max-width: 426px) {
+
+    .body-container {
+        background-color: green;
+        height: 500%;
+    }
+
+    /* ----------------------------------------------------------------------------------------------- */
+    /*                                                                                 Header classes */
+
+
+
+
+     /* ----------------------------------------------------------------------------------------------- */
+    /* ----------------------------------------------------------------                    Main classes */
+
+    .h1-font-size {
+        font-size: 1.625rem;
+    }
+
+    .h2-font-size-first {
+        font-size: 1rem;
+    }
+
+    .h2-font-size-second {
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+    }
+
+    .main-container {
+        width: 100%;
+        height: 100%;
+    }
+
+    .main-container-places-row {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: green;
+        border: 0.5px dotted yellow;
+    }
+
+    .main-container-places-column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: green;
+        border: 0.5px dotted yellow;
+    }
+
+    .main-prices-container-place-and-width-row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+       height: 95%;
+    }
+
+    .main-price-1-window-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 35rem;
+        width: 25rem;
+    }
+
+    .main-price-windows-look {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 0.2px solid hsl(0, 8%, 93%);
+        border-radius: 1rem;
+        background-color: #fff !important;
+        box-shadow: 10px 10px 8px #e6e6e8;
+    }
+
+    table {
+        border-collapse: collapse;
+        width: 100%;
+        height: 100%;
+        }
+    
+    .table-offer {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+    }
+
+    .main-p-under-table-font {
+        width: 110%;
+        font-size: 0.9375rem;
+    }
+
+
+
+
+
+
+
+
+
+
+     /* ----------------------------------------------------------------------------------------------- */
+
+    /*                                                                                  Footer classes */
+
+    .footer-container {
+        height: 100%;
+        width: 100%;
+    }
+
+
+    .footer-container-places-row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 90%;
+        background-color: rgb(63, 70, 63);
+        border: 0.5px dotted yellow;
+    }
+
+    .footer-container-places-column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-width: 90%;
+        background-color: rgb(63, 70, 63);
+        border: 0.5px dotted yellow;
+    }
+}
