--- a/main-css-dev-olmo-v2.css
+++ b/main-css-dev-olmo-v2.css
@@ -2,6 +2,9 @@
 * {
     padding: 0;
     margin: 0;
+}
+
+body {
     height: 100%;
 }
 
@@ -9,7 +12,6 @@
 .body-container {
     display: flex;
     flex-direction: column;
-    height: 500%;
     font-family: 'Rubik', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #6c757d;
     line-height: 1.6666;
@@ -39,7 +41,6 @@
 }
 
 .a-border-bottom {
-    border-bottom: 1px;
     color: #6c757d;
 }
 
@@ -48,13 +49,21 @@
     font-weight: bold;
 }
 
+.bold-and-font-size {
+    font-weight: bold;
+    color: black;
+    font-size: 1.125rem;
+    width: 80%;
+    /*margin-bottom: 1rem; */
+}
+
 
 /* -------------------------------------------------------------------------------------- */
 
 /*                                                                        Header classes */
 .header-container {
     display: flex;
-    background-color: blueviolet;
+    background-color: #fff;
     width: 100%;
     height: 10vh;
     justify-content: space-between;
@@ -69,7 +78,6 @@
 }
 
 .header-logo {
-    background-color: hsl(50, 100%, 50%);
     width: 30%;
 }
 
@@ -77,19 +85,26 @@
     max-height: 38px;
 }
 
+                                                                              /* HEADER NAV */
+
+                                                                              
+
 .header-nav {
     display: flex;
     justify-content: center;
-    background-color: rgb(191, 9, 9);
+    
     width: 70%;
 }
+
+.topnav .icon {
+    display: none;
+  }
 
 .headerul {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    background-color: #578bb0;
 }
 
 li {
@@ -130,7 +145,6 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: brown;
     width: 100%;
     margin-top: 140px;
 }
@@ -141,14 +155,14 @@ li {
 }
 
 /* nie użyty na razie */
+                                                                              /* GENERAL SECTIONS IN MAIN   */
 
 .main-container-places-row {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 90%;
-    background-color: green;
-    border: 0.5px dotted yellow;
+   
 }
 
 .main-container-places-column {
@@ -157,11 +171,12 @@ li {
     align-items: center;
     justify-content: center;
     width: 90%;
-    background-color: green;
-    border: 0.5px dotted yellow;
+   
 }
 
 /*                                                 i tak jak kuba napisał zrobic headery w divach coby zmieniac ich wielkosci tekstu. klasy headerów pierwszych tu*/
+
+                                                                              /* H1 H2 H3  */
 
 .h1-font-size {
     font-size: 3.375rem;
@@ -178,13 +193,12 @@ li {
     text-align: center;
 }
 
+                                                                              /* PRICE OFFER */
 .main-prices-container-place-and-width-row {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    background-color: green;
-    border: 0.5px dotted yellow;
 }
 
 .main-price-1-window-container {
@@ -207,11 +221,16 @@ li {
     width: 95%;
 }
 
+.h2-under-prices-section-container {
+    display: flex;
+    height: 10rem;
+}
 
+                                                                              /* TABLE */
 table {
     border-collapse: collapse;
-    width: 90%;
-    }
+    width: 95%;
+}
 
 .table-offer {
     display: flex;
@@ -241,7 +260,7 @@ td {
     height: 20px;
 }
 
-
+                                                                              /* SECOND MAIN HEADER  */
 .main-p-under-table-container {
     display: flex;
     flex-direction: column;
@@ -259,16 +278,238 @@ td {
     text-align: center;
 }
 
+                                                                              /* PAYMENT METODS SECTION   */
 
+
+.main-container-places-row-space-between {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    
+    gap: 1rem;
+}
+
+h3 {
+    height: auto;
+}
+
+.main-payment-metods {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.main-payment-h3-bold {
+    font-weight: bold;
+    color: black;
+    font-size: 1.125rem;
+    /*margin-bottom: 1rem;*/
+}
+
+.main-payment-images-container {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 0.8rem;
+}
+
+.main-payment-images-size {
+    display: flex;
+    height: 3rem;
+    width: 3rem;
+}
+.main-money-guarantee-SSL-first-text-width {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 35%;
+    margin-left: 4rem;
+}
+
+.main-money-guarantee-SSL-second-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 25%;
+}
+
+
+.main-money-guarantee-SSL-p-font-size {
+    font-size: 1.0625rem;
+    width: 85%;
+}
+
+                                                                              /* FREE TRAIL SECTION   */
+
+.main-container-row-for-trail{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    width: 92%;
+    }
+
+.main-trail-container-heigh-flex {
+  height: 23rem;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.main-trail-div-width-header-and-buttons-look
+{   display: flex;
+    justify-content: center;
+    border: 0.2px solid hsl(0, 8%, 93%);
+    border-radius: 1rem;
+    background-color: #fff !important;
+    box-shadow: 10px 10px 8px #e6e6e8;
+    height: 13rem;
+    width: 100%; 
+}
+
+
+.main-header-and-button-div-inside-div-for-look {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 95%;
+   
+}
+
+.main-trail-header-flex {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 65%;
+}
+
+.main-trail-buttons-into-flex-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:35%;
+    gap: 1rem;
+}
+.main-trail-get-started-button-place {border: 1px solid rebeccapurple; display: flex; align-items: flex-end;}
+
+.trail-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.2rem;
+    border: 0px;
+    color: #fff !important;
+    background-color: #0195ff !important;
+    border-color: #0195ff !important;
+    width: 200px;
+    height: 50px;
+    font-size: 1rem;
+    line-height: 60px;
+    font-weight: 600;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+
+.main-trail-header-font-size {
+    font-size: 2.375rem;
+}
+
+#a3:visited {
+    color: #6c757d;
+}
+
+                                                                              /* GOT QUESTIONS? SECTION */
+
+.main-first-h4-font-size{
+    font-size: 1.25rem;
+    text-align: center;
+    width: 65%;
+}
+
+                                                                              /* "FAQ" SECTION */
+
+.faq-height-and-flex-container {
+    height: 45rem;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    gap: 2rem;
+}
+
+.faq-column-container {
+width: 100%;
+height: 70%;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+gap: 1rem;
+}
+
+.faq-div-container-for-header-and-p {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+  
+}
+
+
+.faq-h5  {
+    height: 20%;
+    font-size: 1.375rem;
+}
+
+.faq-p {
+    font-size: 1.1875rem;
+    
+}
+
+.faq-p-list {
+    display: list-item;
+    font-size: 1.1875rem;
+    list-style: disc;
+}
+
+.faq-li {
+    margin-left: 20px;
+  
+}
+
+                                                                              /* LAST HEADER SECTION  */
+
+.last-header-section-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-weight: 400 ;
+    height: 7rem;
+    gap: 0.2rem;
+}
+
+.last-header-section-font-size {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.375rem;
+}
+.nosize {
+    display: flex;
+    width: auto;
+    height: auto;
+}
 
 
 /* -------------------------------------------------------------------------------------- */
 /*                                                                        Footer classes */
+
+
 .footer-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: aqua;
     width: 100%;
 }
 
@@ -277,17 +518,94 @@ td {
     justify-content: center;
     align-items: center;
     width: 90%;
-    background-color: rgb(63, 70, 63);
-    border: 0.5px dotted yellow;
 }
 
 .footer-container-places-column {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 90%;
-    background-color: rgb(63, 70, 63);
-    border: 0.5px dotted yellow;
+}
+
+                                                                                  /* FOOTER HEADER SECTION */ 
+
+.footer-header-size-container {
+    height: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-header-container {
+    display: flex;
+    height: 10rem;
+    width: 70%;
+}
+.footer-header-flex-place {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-h4 {
+    font-size: 1.25rem;
+    text-align: center;
+    width: 85%;
+    font-weight: 100;
+}
+
+                                                                              /* FOOTER OPINIONS SECTION */ 
+
+                                                                              /* FOOTER MENU SECTION */ 
+
+.footer-menu-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer-menu-logo-with-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 28%;
+    height: 90%;
+}
+
+.footer-logo-img {
+    height: 50px;
+    width: 120px;
+}
+
+.footer-menu-title-with-subtitles-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.footer-line {
+
+    justify-content: center;
+    height: 1px;
+    margin: 2rem;
+    width: 70%;
+    border: 0;
+    margin-left: 10%;
+    background-image: linear-gradient(90deg, rgba(206, 211, 246, 0) 0, #bbb 38%, #bbb 64%, rgba(206, 211, 246, 0) 99%);
+    background-color: transparent;
+}
+
+                                                                              /* FOOTER SM SECTION */ 
+
+.footer-social-media-sectrion-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 }
 
 
@@ -297,13 +615,3 @@ td {
 /*                                                                        Test space*/
 
 
-.klocektest {
-    height: 2000%;
-}
-
-
-.klocektest3 {
-    background-color: hsl(253, 100%, 50%);
-    width: 70%;
-    border: 3px solid pink;
-}
